cargo-features = ["codegen-backend"]

[package]
name = "atem-dots"
version = "0.2.4"
edition = "2024"
description = "A (dot)file manager"
authors = ["Jul Lang <jullanggit@proton.me>"]
repository = "https://github.com/jullanggit/dots"
readme = "README.md"
license = "MIT"
categories = ["command-line-utilities", "filesystem"]
keywords = ["dotfiles"]

[[bin]]
name = "dots"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5.11", features = ["derive"] }
