cargo-features = ["codegen-backend"]

[package]
name = "atem-dots"
version = "0.2.6"
edition = "2024"
description = "A (dot)file manager"
authors = ["Jul Lang <jullanggit@proton.me>"]
repository = "https://github.com/jullanggit/dots"
readme = "README.md"
license = "MIT"
categories = ["command-line-utilities", "filesystem"]
keywords = ["dotfiles"]

[[bin]]
name = "dots"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.96"
clap = { version = "4.5.11", features = ["derive"] }

[lints.clippy]
# Groups
cargo = "warn"
nursery = "warn"
pedantic = "warn"

derive_partial_eq_without_eq = { level = "allow", priority = 1 } # Dont always want eq on enums

expect_used = "warn"
unwrap_used = "warn"
panic = "warn"

# Restrict
# absolute_paths = "warn"
allow_attributes = "warn"
assertions_on_result_states = "warn"
clone_on_ref_ptr = "warn"
dbg_macro = "warn"
decimal_literal_representation = "warn"
deref_by_slicing = "warn"
empty_enum_variants_with_brackets = "warn"
empty_structs_with_brackets = "warn"
error_impl_error = "warn"
filetype_is_file = "warn"
fn_to_numeric_cast_any = "warn"
format_push_string = "warn"
get_unwrap = "warn"
if_then_some_else_none = "warn"
infinite_loop = "warn"
integer_division = "warn"
large_include_file = "warn"
let_underscore_must_use = "warn"
lossy_float_literal = "warn"
map_with_unused_argument_over_ranges = "warn"
multiple_inherent_impl = "warn"
multiple_unsafe_ops_per_block = "warn"
mutex_atomic = "warn"
needless_raw_strings = "warn"
non_zero_suggestions = "warn"
pathbuf_init_then_push = "warn"
pattern_type_mismatch = "warn"
rc_buffer = "warn"
rc_mutex = "warn"
redundant_type_annotations = "warn"
renamed_function_params = "warn"
rest_pat_in_fully_bound_structs = "warn"
same_name_method = "warn"
semicolon_inside_block = "warn"
str_to_string = "warn"
string_add = "warn"
string_to_string = "warn"
try_err = "warn"
undocumented_unsafe_blocks = "warn"
unneeded_field_pattern = "warn"
unseparated_literal_suffix = "warn"
unused_result_ok = "warn"
unused_trait_names = "warn"
verbose_file_reads = "warn"
wildcard_enum_match_arm = "warn"
